fixing line break at pdf

--- a/src/features/resume/templates/Tpl1.module.css
+++ b/src/features/resume/templates/Tpl1.module.css
@@ -19,6 +19,7 @@
 .modernHeader {
   text-align: center;
   margin-bottom: 20px;
+  page-break-inside: avoid;
 }
 .profileImg {
   width: 80px;
@@ -54,6 +55,7 @@
 }
 .section {
   margin-bottom: 20px;
+  page-break-inside: avoid;
 }
 .section h2 {
   font-size: 14px;
@@ -70,6 +72,7 @@
 }
 .job {
   margin-bottom: 1.5rem;
+  page-break-inside: avoid;
 }
 .jobHeader,
 .jobSubheader {
